# global_racetrajectory_optimization

./: requirements.txt
global_racetrajectory_optimization/: package.xml  setup.cfg  setup.py
global_racetrajectory_optimization/global_racetrajectory_optimization/: trajectory_optimizer.py
global_racetrajectory_optimization/global_racetrajectory_optimization/frictionmap/src/: plot_frictionmap_data.py  plot_frictionmap_grid.py
global_racetrajectory_optimization/global_racetrajectory_optimization/opt_mintime_traj/src/: approx_friction_map.py  extract_friction_coeffs.py  opt_mintime.py
