<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_racetrajectory_optimization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-skimage</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
